Настройка обработки статики

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,16 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/static/style.css">
     <title>Главная</title>
 </head>
 <body>
     <h1>Главная сайт "книги"</h1>
     <p>Добро пожаловать на наш сайт, где вы можете найти множество книг на любой вкус.</p>
-    {% for book in books %}
-        <div class="card">
-            <h2 class="title-card">{{ book.title }}</h2>
-            <p class="desc-card">{{ book.desc }}</p>
-        </div>
-    {% endfor %}
+    <div class="wrap">
+        {% for book in books %}
+            <div class="card">
+                <h2 class="title-card">{{ book.title }}</h2>
+                <p class="desc-card">{{ book.desc }}</p>
+            </div>
+        {% endfor %}
+    </div>
 </body>
 </html>
