--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/style.css">
-    <title>Главная</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block main %}
     <h1>Главная сайт "книги"</h1>
     <p>Добро пожаловать на наш сайт, где вы можете найти множество книг на любой вкус.</p>
     <div class="wrap">
@@ -17,5 +11,5 @@
             </div>
         {% endfor %}
     </div>
-</body>
-</html>
+{% endblock main %}
+
