--- a/static/style.css
+++ b/static/style.css
@@ -13,12 +13,25 @@ body{
 .wrap{
     display: flex;
     flex-wrap: wrap;
+    gap: 30px;
+    justify-content: center;
 }
 
 .card{
-    width: 200px;
+    width: 260px;
     height: 300px;
     box-shadow: 0 5px 5px rgba(40, 40, 40, 0.5);
+    border-radius: 15px;
+    padding: 20px 40px;
+}
+
+.desc-card{
+    height: 170px;
+    overflow-y: scroll;
+}
+
+.title-card{
+    margin-bottom: 20px;
 }
 
 header{
