--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -2,4 +2,24 @@
 
 {% block main %}
     <h1>Каталог книг</h1>
+    <form class="panel-filter" method="GET">
+        <label for="author">Автор:</label>
+        <select name="author" id="author">
+
+        </select>
+        <input type="submit" value="Найти">
+    </form>
+
+    <div class="wrap">
+        {% for book in books %}
+            <div class="card">
+                <h2 class="title-card">{{ book.title }}</h2>
+                <p class="desc-card">{{ book.desc }}</p>
+            </div>
+        {% endfor %}
+    </div>
 {% endblock main %}
+
+{% block scripts %}
+    <script src="/static/loadForm.js"></script>
+{% endblock scripts %}
