--- a/static/style.css
+++ b/static/style.css
@@ -18,6 +18,21 @@ body{
     padding-top: 20px;
 }
 
+.wrap-info{
+    display: flex;
+    gap: 10px;
+    padding: 20px;
+}
+
+.info-git{
+    direction: none;
+    font-size: 20px;
+}
+
+.text-size{
+    font-size: 20px;
+}
+
 .card{
     width: 260px;
     height: 300px;
