создал страницу с отзывами

--- a/static/style.css
+++ b/static/style.css
@@ -77,3 +77,12 @@ a{
     gap: 20px;
     margin: 20px;
 }
+
+.message-card{
+    height: 170px;
+    overflow-y: scroll;
+}
+
+.name-card{
+    margin-bottom: 20px;
+}
