--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
             <a href="{% url 'index' %}"><h1>Главная</h1></a>
             <a href="{% url 'catalog' %}"><h1>Каталог</h1></a>
             <a href="{% url 'info' %}"><h1>О нас</h1></a>
+            <a href="{% url 'review' %}"><h1>Отзывы</h1></a>
         </nav>
 
         <div class="auth">
