--- a/templates/base.html
+++ b/templates/base.html
@@ -16,11 +16,11 @@
         </nav>
 
         <div class="auth">
-            {% if user.is_authentificated %}
-                <h2>{{ user.username }}</h2>
+            {% if user.is_authenticated %}
+                <a href=" {% url 'account' user.id %} ">{{ user.username }}</a>
             {% else %}
-                <a href="">Войти</a>
-                <a href="">Регистрация</a>
+                <a href=" {% url "login" %}">Войти</a>
+                <a href="{% url "registration" %}">Регистрация</a>
             {% endif %}
         </div>
     </header>
