добавил оформление карточек отзывов

--- a/templates/review.html
+++ b/templates/review.html
@@ -4,7 +4,7 @@
     <h1>Отзывы</h1>
     <div class="wrap-review">
         {% for review in reviews %}
-            <div class="card-review">
+            <div class="card">
                 <h2 class="name-card">{{ review.name }}</h2>
                 <p class="message-card">{{ review.message }}</p>
             </div>
