начал делать поиск в каталоге по дате публикации

--- a/templates/book_card.html
+++ b/templates/book_card.html
@@ -6,4 +6,5 @@
         <a href="{% url "author" author.id %}">{{author.name}}</a>
     </h3>
     <p>Описание: {{book.desc}}</p>
+    <p>Дата публикации: {{book.date_public}}</p>
 {% endblock main %}
