--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -4,10 +4,14 @@
     <h1>Каталог книг</h1>
     <form class="panel-filter" method="GET">
         <label for="author">Автор:</label>
-        <select name="author" id="author">
-
-        </select>
+        <select name="author" id="author"></select>
         <input type="submit" value="Найти">
+    </form>
+
+    <form class="panel-filter" method="GET">
+        <label for="date">Дата публикации:</label>
+        <input id="date">
+        <input type="submit" value="Найти">    
     </form>
 
     <div class="wrap">
