доделал фильтрацию книг по дате публикации

--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -10,7 +10,7 @@
 
     <form class="panel-filter" method="GET">
         <label for="date">Дата публикации:</label>
-        <input id="date">
+        <input name="date">
         <input type="submit" value="Найти">    
     </form>
 
